tests/__snapshots__/validation-configFile-single-quoted-option-values.snap.txt
Error: String literal with double quotes expected.

  1 | {
  2 |   "rootPath": '../',
    |               ~~~~~
  3 |   "target": ["current"]
  4 | }
  5 | 

      at ./tstyche.config.json:2:15

